# GuessTheNumber

./: README.md
backend/: CMakeLists.txt
backend/src/: main.cpp
frontend/: index.html  script.js  styles.css
